--- a/minibar.frontend/src/App.css
+++ b/minibar.frontend/src/App.css
@@ -87,9 +87,13 @@ html, body {
 .bar-name {
     font-size: 1.5rem;
     font-weight: 700;
-    color: white;
+    color: var(--text-light);
     text-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
     white-space: nowrap;
+}
+
+.bar-name a{
+    color: var(--text-light);
 }
 
 /* Логотип */
@@ -162,6 +166,7 @@ html, body {
 
 .user {
     display: flex;
+    color: var(--text-light);
     align-items: center;
     gap: 0.5rem;
     font-weight: 500;
@@ -180,6 +185,8 @@ html, body {
 .main {
     flex-grow: 1;
     display: flex;
+    flex-direction: column; /* Элементы будут располагаться вертикально */
+    gap: 3rem;
     justify-content: center;
     align-items: center;
     text-align: center;
