--- a/minibar.frontend/src/styles/DrinksTable.css
+++ b/minibar.frontend/src/styles/DrinksTable.css
@@ -10,7 +10,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    border: 1px solid #38b1ac;
+    background: var(--card-backgr-color);
+    border: var(--card-border-color) 1px solid;
     border-radius: 8px;
     padding: 15px;
     transition: transform 0.2s;
@@ -18,6 +19,7 @@
 
 .drink-card:hover {
     transform: translateY(-5px);
+    background-color: var(--card-backgr-hover-color);
 }
 
 .drink-image {
@@ -26,7 +28,7 @@
     border-radius: 40%;
     object-fit: cover;
     margin-bottom: 10px;
-    border: 2px solid #eee;
+    border: 2px solid #0a1b14;
 }
 
 .drink-name {
